Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,13 @@
+trigger:
+- feature-ms-pabloSepulveda-mensaje
+
 pool:
   vmImage: ubuntu-latest
 
 steps:
+- script: |
+      git fetch --unshallow
+  displayName: 'convert to non-shallow clone' 
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
