--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,5 @@ jobs:
         pathToSources: '$(System.DefaultWorkingDirectory)/src/main/java/'
         reportDirectory: '$(System.DefaultWorkingDirectory)/target/site/jacoco'
         failIfCoverageEmpty: true
+    condition: |
+     (float(variables['Build.CodeCoverageSummary.lineCoverage']) >= 85.0)
