--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,4 +29,4 @@ jobs:
         reportDirectory: '$(System.DefaultWorkingDirectory)/target/site/jacoco'
         failIfCoverageEmpty: true
     condition: |
-     (float(variables['Build.CodeCoverageSummary.lineCoverage']) >= 85.0)
+     and(succeeded(), greater(variables['Build.CodeCoverageSummary.lineCoverage'], 85.0))
