Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ jobs:
     inputs:
       SonarCloud: 'DevOps Project'
       organization: 'psep'
-      scannerMode: 'CLI'
+      scannerMode: 'Other'
       projectKey: 'Psep_microservicio-spring'
       projectName: 'microservicio-spring'
   
