--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
       jdkArchitectureOption: 'x64'
       publishJUnitResults: true
       testResultsFiles: '**/surefire-reports/TEST-*.xml'
-      goals: 'clean test package'
+      goals: 'clean test'
 
   - task: PublishCodeCoverageResults@1
     inputs:
@@ -42,9 +42,13 @@ jobs:
       projectKey: 'Psep_microservicio-spring'
       projectName: 'microservicio-spring'
   
-  - task: SonarCloudAnalyze@1
-
-  - task: SonarCloudPublish@1
+  - task: Maven@3
     inputs:
-      pollingTimeoutSec: '300'
+      mavenPomFile: 'pom.xml'
+      mavenOptions: '-Xmx3072m'
+      javaHomeOption: 'JDKVersion'
+      jdkVersionOption: '1.8'
+      jdkArchitectureOption: 'x64'
+      goals: 'clean package'
+      sonarQubeRunAnalysis: true
 
