--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,10 @@ jobs:
   - task: Docker@2
     inputs:
       containerRegistry: 'Docker Hub Psep'
+      command: 'login'
+  - task: Docker@2
+    inputs:
+      containerRegistry: 'Docker Hub Psep'
       repository: 'psep/testing-web-complete'
       command: 'buildAndPush'
       Dockerfile: '**/Dockerfile'
