--- a/app-deployment.yaml
+++ b/app-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: testing-web-complete
-          image: psep/testing-web-complete:latest
+          image: psep/testing-web-complete:_tag_
           ports:
             - containerPort: 8080
