--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,16 +2,13 @@ trigger:
 - feature-ms-pabloSepulveda-mensaje
 
 jobs:
-- job: MicroservicioSpringPipeline
-  displayName: 'microservicio spring pipeline'
+- job: BuildAndPublish
+  displayName: 'Build and publish'
   pool:
    vmImage: ubuntu-latest
   steps:
-#  - script: |
-#      git fetch --unshallow
-#    displayName: 'convert to non-shallow clone' 
   - task: Maven@3
-    displayName: 'Build'
+    displayName: 'Build and test'
     inputs:
       mavenPomFile: 'pom.xml'
       mavenOptions: '-Xmx3072m'
@@ -48,7 +45,7 @@ jobs:
       jdkArchitectureOption: 'x64'
       publishJUnitResults: true
       testResultsFiles: '**/surefire-reports/TEST-*.xml'
-      goals: 'clean package'
+      goals: 'package'
       sonarQubeRunAnalysis: true
   - task: Docker@2
     displayName: 'Docker Login'
@@ -56,17 +53,16 @@ jobs:
       containerRegistry: 'Docker Hub Psep'
       command: 'login'
   - task: Docker@2
-    displayName: 'Docker registry image'
+    displayName: 'Docker build and publish image'
     inputs:
       containerRegistry: 'Docker Hub Psep'
       repository: 'psep/testing-web-complete'
       command: 'buildAndPush'
       Dockerfile: '**/Dockerfile'
-#      tags: '$(Build.BuildId)'
 
 - job: Deploy
   displayName: 'Deploy to Kubernetes'
-  dependsOn: MicroservicioSpringPipeline
+  dependsOn: BuildAndPublish
   pool: 'Default'
   steps:
   - task: Bash@3
@@ -75,11 +71,11 @@ jobs:
       targetType: 'inline'
       script: |
         cat app-deployment.yaml
-        echo "Cambiando tag de deployment"
+        echo "Change tag image in deployment file"
         sed -i "s|_tag_|$(Build.BuildId)|g" app-deployment.yaml
         cat app-deployment.yaml
   - task: Kubernetes@1
-    displayName: 'Deploy pod'
+    displayName: 'Deploy application'
     inputs:
       connectionType: 'None'
       command: 'apply'
