--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.7</version>
+				<configuration>
+					<excludes>
+						<exclude>com/example/testingweb/TestingWebApplication.class</exclude>
+					</excludes>
+            	</configuration>
 				<executions>
 					<execution>
 						<goals>
